fix invisible border

--- a/css/style.css
+++ b/css/style.css
@@ -97,7 +97,7 @@
         color: #000;
         background-color: rgba(255, 127, 80, 0.5);
         text-decoration: none;
-        border: none;
+        border-bottom: 1px solid transparent;
     }
 
     :focus {
